button added in the home page to redirect to login page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <li>Task 56</li>
         <li>Task 5</li>
       </ul>
+      <!-- button to link login page -->
+      <a href="login.html"><button>Login</button></a>
+      
     </div>
 
     <script src="script.js"></script>
